tests/test_files_pa3/SemanticErrors/ArrayTestError.ic
class B {}

class A
{
	
	static void main(string[] args) { }

	int foo(int x)
	{
		int y;
		string s;
		boolean bTrue = true;
		B b_1 = new B();
		B b_2 = new B();
		
		y = 7;
		s = "GuyTomSharon";
		
		string[] strArr = new string[x+y];
		int[][] intArr = new int[][y];
		boolean[] boolArr = new boolean[x*y];
		B[][][] bArr = new B[][][y%x];
		
		strArr[x-1] = ("Hello" + s);
		intArr[x/2][y/2] = y*x;
		boolArr[0] = (y<x && bTrue);
		bArr[0][0][0] = b_1;
		
		s = strArr[x-1];
		y = intArr[y > 0][x/2];
		bTrue = boolArr[0];
		b_2 = bArr[0][0][0];
		
		return (a + (intArr[2].length * boolArr.length - intArr.length + strArr.length) - bArr[1][2].length);
	}
}